<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

    <TextView
            android:id="@+id/timestamp"
            android:text="@string/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cityName"
            app:layout_constraintBottom_toTopOf="@id/icon_weather"
    />

    <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cityName"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/timestamp"
            app:layout_constraintRight_toLeftOf="@id/country"
            app:layout_constraintBottom_toTopOf="@id/icon_weather"
            />

    <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/cityName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/icon_weather" />

    <ImageView
            android:id="@+id/icon_weather"
            android:layout_width="60dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="@id/hard_coded_temperature"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintVertical_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/hard_coded_temperature"
            android:text="@string/hard_coded_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@id/icon_weather"
            app:layout_constraintLeft_toRightOf="@id/icon_weather"
            app:layout_constraintRight_toLeftOf="@id/hard_coded_wind"
            app:layout_constraintBottom_toTopOf="@id/temperature"/>

    <TextView
            android:id="@+id/temperature"
            android:text="@string/real_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/hard_coded_temperature"
            app:layout_constraintLeft_toLeftOf="@id/hard_coded_temperature"
            app:layout_constraintRight_toRightOf="@id/hard_coded_temperature"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <TextView
            android:id="@+id/hard_coded_wind"
            android:text="@string/hard_coded_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@id/icon_weather"
            app:layout_constraintLeft_toRightOf="@id/hard_coded_temperature"
            app:layout_constraintRight_toLeftOf="@id/hard_coded_humidity"
            app:layout_constraintBottom_toTopOf="@id/speed"
            />

    <TextView
            android:id="@+id/speed"
            android:text="@string/real_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/hard_coded_wind"
            app:layout_constraintLeft_toLeftOf="@id/hard_coded_wind"
            app:layout_constraintRight_toRightOf="@id/hard_coded_wind"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <TextView
            android:id="@+id/hard_coded_humidity"
            android:text="@string/hard_coded_humidity"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/icon_weather"
            app:layout_constraintLeft_toRightOf="@id/hard_coded_wind"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/humidity"
            />

    <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_humidity"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/hard_coded_humidity"
            app:layout_constraintLeft_toLeftOf="@id/hard_coded_humidity"
            app:layout_constraintRight_toRightOf="@id/hard_coded_humidity"
            app:layout_constraintBottom_toBottomOf="parent"

            />


</android.support.constraint.ConstraintLayout>