<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical">

    <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/now"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/cityName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cityName"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/country"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/timestamp"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/country"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cityName"
            app:layout_constraintTop_toTopOf="parent" />


    <TextView
            android:id="@+id/hard_coded_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/hard_coded_temperature"
            android:textSize="15sp"
            app:layout_constraintHorizontal_bias="0.227"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/hard_coded_wind"
            app:layout_constraintTop_toBottomOf="@id/cityName" />


    <TextView
            android:id="@+id/hard_coded_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/hard_coded_wind"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@id/hard_coded_temperature"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityName"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>


    <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_temperature"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/hard_coded_temperature"
            app:layout_constraintLeft_toLeftOf="@id/hard_coded_temperature"
            app:layout_constraintRight_toRightOf="@id/hard_coded_temperature"
            app:layout_constraintTop_toBottomOf="@id/hard_coded_temperature"
            android:paddingTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

    <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_wind"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingTop="30dp"
            app:layout_constraintBottom_toBottomOf="@id/hard_coded_wind"
            app:layout_constraintLeft_toLeftOf="@id/hard_coded_wind"
            app:layout_constraintRight_toRightOf="@id/hard_coded_wind"
            app:layout_constraintTop_toBottomOf="@id/hard_coded_wind"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

    <ImageView
            android:id="@+id/icon_weather"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />


</androidx.constraintlayout.widget.ConstraintLayout>