<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout"
        tools:context="androidviakotlin.blog.weatherforecastbygps.MainActivity"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">


    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/root_layout_main_activity"
            android:orientation="vertical">


        <!--<android.support.v7.widget.Toolbar-->
                <!--android:id="@+id/toolbar"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="?android:attr/actionBarSize"-->
                <!--android:background="@color/colorPrimary"-->
                <!--app:layout_constraintTop_toTopOf="parent"-->
                <!--app:titleTextColor="#FFFFFF"/>-->

        <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:titleTextColor="@color/colorAccent"
                app:tabTextAppearance="@style/Base.TextAppearance.AppCompat"
                app:tabMode="fixed"
                app:tabGravity="fill"/>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/root_coordinates"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:orientation="horizontal">


            <TextView
                    android:id="@+id/hard_coded_latitude"
                    android:text="@string/latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/button_update_coordinates"
                    app:layout_constraintRight_toLeftOf="@id/button_update_coordinates"
                    app:layout_constraintBottom_toTopOf="@id/yourCurrentLatitude"
                    />


            <TextView
                    android:id="@+id/yourCurrentLatitude"
                    android:text="@string/latitudeValueSample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    app:layout_constraintTop_toBottomOf="@id/hard_coded_latitude"
                    app:layout_constraintLeft_toLeftOf="@id/hard_coded_latitude"
                    app:layout_constraintRight_toRightOf="@id/hard_coded_latitude"
                    app:layout_constraintBottom_toBottomOf="@id/button_update_coordinates"
                    />

            <Button
                    android:id="@+id/button_update_coordinates"
                    android:text="@string/YourCoordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/hard_coded_latitude"
                    app:layout_constraintRight_toLeftOf="@id/hard_coded_longitude"

                    style="@style/Widget.AppCompat.Button"
                    android:backgroundTint="@color/colorBlueHalo"
                    android:textColor="@color/colorWhite"
                    />
<!--            android:background="@drawable/custombutton"-->


            <TextView
                    android:id="@+id/hard_coded_longitude"
                    android:text="@string/longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    app:layout_constraintTop_toTopOf="@id/button_update_coordinates"
                    app:layout_constraintLeft_toRightOf="@id/button_update_coordinates"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/yourCurrentLatitude"
                    />




            <TextView
                    android:id="@+id/yourCurrentLongitude"
                    android:text="@string/longitudeValueSample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    app:layout_constraintTop_toBottomOf="@id/hard_coded_longitude"
                    app:layout_constraintBottom_toBottomOf="@id/button_update_coordinates"
                    app:layout_constraintLeft_toLeftOf="@id/hard_coded_longitude"
                    app:layout_constraintRight_toRightOf="@id/hard_coded_longitude"
            />


        </android.support.constraint.ConstraintLayout>


        <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>

    </LinearLayout>



</android.support.v4.widget.DrawerLayout>